# openifs

./: .gitignore  README.md  bundle.yml  hpc-csc-config.edit_me.sh  oifs-config.edit_me.sh  oifs-config.nld5163.sh
.github/workflows/: bit-compare-docker.yml  bit-compare-host.yml
arch/bsc/mn5-gpp/: default
arch/csc/: final.cmake  modulefile.in
arch/csc/mahti/: default
arch/csc/puhti/: compile_flags_puhti.cmake  default
ifs-source/: CMakeLists.txt
ifs-source/arpifs/chem/: bascoetm5_chem_ini.F90  chem_bascoetm5.F90  chem_init.F90  chem_main.F90  chem_tm5.F90  tm5_chem_ini.F90  tm5_glomap_aerosol.F90  tm5_macc_aerosol.F90  tm5_rbud.F90  tm5_wetchem_m7.F90
ifs-source/arpifs/climate/: updclie_aerclim.F90  updclie_compo.F90
ifs-source/arpifs/control/: cnt4.F90  stepx.F90
ifs-source/arpifs/dia/: sucddh.F90
ifs-source/arpifs/m7/: hamm7_diag_pm.F90  hamm7_init.F90  tm5m7_init.F90
ifs-source/arpifs/m7/chem/: tm5_wetchem_m7.F90
ifs-source/arpifs/m7/module/: m7_data.F90  mo_activ.F90  mo_advection.F90  mo_control.F90  mo_exception.F90  mo_filename.F90  mo_ham.F90  mo_ham_activ.F90  mo_ham_init.F90  mo_ham_kappa.F90  mo_ham_m7.F90  mo_ham_m7_emi_seasalt.f90  mo_ham_m7_nucl.F90  mo_ham_m7ctl.F90  mo_ham_rad.F90  mo_ham_rad_data.F90  mo_ham_sedimentation.F90  mo_ham_soa.F90  mo_ham_species.F90  mo_ham_subm.F90  mo_ham_subm_species.F90  mo_ham_tools.F90  mo_ham_wetdep.F90  mo_ham_wetdep_data.F90  mo_hammoz_drydep.F90  mo_hammoz_sedimentation.F90  mo_hammoz_wetdep.F90  mo_io_units.F90  mo_kind.F90  mo_math_constants.F90  mo_namelist.F90  mo_netcdf.F90  mo_param_switches.F90  mo_radiation_parameters.F90  mo_read_netcdf77.F90  mo_species.F90  mo_submodel.F90  mo_time_control.F90  mo_tracdef.F90  mo_tracer.F90  (+6 more)
ifs-source/arpifs/m7/phys_ec/: NdParam.f  hamm7_interface.F90  m7.F90  parametr.inc  tm5m7_get_refr_idx.F90  tm5m7_optics_aop_get.F90  tm5m7_optics_calculate_aop.F90  tm5m7_optics_get.F90  tm5m7_optics_init.F90  tm5m7_phy2.F90  tm5m7_sediment.F90  tm5m7_src.F90  tm5m7_src_dust.F90  tm5m7_src_dust_init.F90  tm5m7_src_ss.F90  yoe_aer_activ.F90
ifs-source/arpifs/m7_nonused/: mo_constants.F90  mo_convert_concentrations.F90
ifs-source/arpifs/mgrids/advection/: mgrids_advection_module.F90  mgrids_advection_submodule.F90
ifs-source/arpifs/module/: m7_data.F90  model_mod_model_ini_phys.F90  model_mod_model_step.F90  model_physics_aerosol_mod.F90  par_gfl.F90  parfpos.F90  surface_fields_mix.F90  tm5_photolysis.F90  tm5m7_data.F90  tm5m7_optics_data.F90  yoeaeratm.F90  yoeaerop.F90  yoeaersnk.F90  yoeaersrc.F90  yoedust.F90  yoerad.F90  yom_grib_codes.F90  yom_ygfl.F90  yomafn.F90  yomcompo.F90  yomcst.F90  yomm7ctl.F90  yommcc.F90  yomphyder.F90
ifs-source/arpifs/namelist/: naeaer.nam.h  naerad.nam.h  namcompo.nam.h  namm7ctl.nam.h  nammcc.nam.h
ifs-source/arpifs/phys_ec/: OIFS_to_HAM.F90  aer_negat.F90  aer_phy3.F90  aer_phy3_layer.F90  aer_rad.F90  aer_so2so4_v2.F90  aer_src.F90  aer_ssalt_ms.F90  aerini_layer.F90  aero_init.F90  callpar.F90  cloud_layer.F90  cloudsc.F90  cmip_strato_aero.F90  cmip_strato_aero_interp.F90  cmip_strato_aero_process.F90  compo_apply_emissions.F90  compo_apply_emissions_layer.F90  ec_phys.F90  ec_phys_drv.F90  gems_init.F90  hamm7_init.F90  hamm7_interface.F90  local_arrays_fin.F90  local_arrays_ini.F90  m7.F90  m7_box.F90  m7_simple_sulfur_drydep.F90  mo_activ.F90  mo_advection.F90  mo_control.F90  mo_conv.F90  mo_exception.F90  mo_ham.F90  mo_ham_drydep.F90  mo_ham_kappa.F90  mo_ham_m7.F90  mo_ham_m7_nucl.F90  mo_ham_m7_trac.F90  mo_ham_m7ctl.F90  (+36 more)
ifs-source/arpifs/phys_radi/: ice_effective_radius.F90  raddrv.F90  radiation_scheme.F90  radintg.F90  suecrad.F90
ifs-source/arpifs/setup/: su0yomb.F90  su_surf_flds.F90  suctrl_gflattr.F90  sudefo_gflattr.F90  sugfl1.F90  sugfl2.F90  sugfl3.F90  sumcc.F90  sumcclag.F90
ifs-source/arpifs/utility/: updtim.F90
ifs-source/cmake/: compile_flags.cmake  intfb.cmake
ifs-source/radiation/module/: radiation_aerosol.F90  radiation_aerosol_optics.F90  radiation_cloud_optics.F90  radiation_ifs_rrtm.F90  radiation_interface.F90
ifs-source/scmec/source/: cnt41c.F90
ifs-test/tests/: CMakeLists.txt
ifs-test/tests/compo_data/: m7
ifs-test/tests/t21/: CMakeLists.txt
ifs-test/tests/t21/common/: CMakeLists.txt  namelist_m7_ok
ifs-test/tests/t21/common/aer/: aer_chem.nml  aer_compoemis.nml  m7_aero_old.nml  m7_aerowvldiag_old.nml
ifs-test/tests/t21/common/m7/: m7_aero.nml  m7_aerowvldiag.nml  m7_compoemis.nml
ifs-test/tests/t21/test_compo_fc/: params
ifs-test/tests/t21/test_compo_fc_m7_noemi/: README.md  setup
ifs-test/tests/t21/test_compo_fc_m7_norad/: postprocessing  setup
ifs-test/tests/t255/: CMakeLists.txt
ifs-test/tests/t255/common/: CMakeLists.txt  env_vars  namelist_m7_from_openifsrun  namelist_m7_ok  namelists
ifs-test/tests/t255/common/aer/: aer_yaerodesc.nml
ifs-test/tests/t255/common/m7/: fort.4-oac-adapted  m7_aero.nml  m7_aerowvldiag.nml  m7_chem.nml  m7_compoemis.nml
ifs-test/tests/t255/ifsdata/: C11CLIM  C12CLIM  C22CLIM  CCL4CLIM  CH4CLIM  CO2CLIM  ECOZC  GCH4CLIM  GCO2CLIM  GOZOCLIM  MCH4CLIM  MCICA  MCO2CLIM  MOZOCLIM  N2OCLIM  NO2CLIM  OZOCLIM  RADRRTM  RADSRTM  SO4_A1B2000  SO4_A1B2010  SO4_A1B2020  SO4_A1B2030  SO4_A1B2040  SO4_A1B2050  SO4_A1B2060  SO4_A1B2070  SO4_A1B2080  SO4_A1B2090  SO4_A1B2100  SO4_OBS1920  SO4_OBS1930  SO4_OBS1940  SO4_OBS1950  SO4_OBS1960  SO4_OBS1970  SO4_OBS1980  SO4_OBS1990  aerosol_cams_climatology_43R3a.nc  aerosol_ifs_rrtm_43R3.nc  (+17 more)
ifs-test/tests/t255/inidata/: ICMCLham7INIT  ICMCLham7INIT_COMPO  ICMGGham7INIT  ICMGGham7INIUA  ICMSHham7INIT  PLS_ICMCLham7INIT  PLS_ICMCLham7INIT_COMPO  PLS_ICMGGham7INIT  PLS_ICMGGham7INIUA  PLS_ICMSHham7INIT
ifs-test/tests/t255/test_compo_fc_m7/: params  setup
scripts/bootstrap/docker/: Dockerfile  README.md  create-oifs-docker.py
scripts/build_test/: openifs-test.sh
scripts/ci/docker_ci/: Dockerfile.ci  (+3 more)
scripts/exp_3d/: run-oifs.ecmwf-hpc2020.job
scripts/shared/: README.md  ci_lib.py  docker_lib.py  find_py_packages.py  read_yml_config.py  setup_logging.py  shared_helpers.py
(+16 files in other folders)
